<resources>
    <string name="app_name" translatable="false">Keisic</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_scrobbles" translatable="false">Scrobbles</string>
    <string name="menu_loved" translatable="false">Loved</string>
    <string name="menu_friends" translatable="false">Friends</string>
    <string name="menu_chart">Chart</string>
    <string name="channel_name" translatable="false">keisic</string>
    <string name="channel_description" translatable="false">channel of keisic app</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="services_header">Services</string>
    <string name="storage_header">Storage</string>

    <!-- Service Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Storage Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="storage_local" translatable="false">Save data local</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email_or_username">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="password_not_match">Passwords not match</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
</resources>