<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_scrobbles">

    <fragment
        android:id="@+id/nav_scrobbles"
        android:name="com.taquangkhoi.keisic.ui.scrobbles.HomeFragment"
        android:label="@string/menu_scrobbles"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_loved"
        android:name="com.taquangkhoi.keisic.ui.gallery.GalleryFragment"
        android:label="@string/menu_loved"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.taquangkhoi.keisic.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_slideshow" />
</navigation>